Teoria de Lenguajes/TP/tlengrep/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> <empty>
Rule 2     start -> expression
Rule 3     expression -> expression UNI concatenation
Rule 4     expression -> concatenation
Rule 5     concatenation -> concatenation quantifier
Rule 6     concatenation -> quantifier
Rule 7     quantifier -> quantifier STAR
Rule 8     quantifier -> quantifier PLUS
Rule 9     quantifier -> quantifier OPT
Rule 10    quantifier -> quantifier SQUANTIFIER
Rule 11    quantifier -> quantifier DQUANTIFIER
Rule 12    quantifier -> constant
Rule 13    constant -> POPEN start PCLOSE
Rule 14    constant -> DIGIT
Rule 15    constant -> ALPHA
Rule 16    constant -> CHAR
Rule 17    constant -> RANGE
Rule 18    constant -> RSV
Rule 19    constant -> COPEN charclasscontents CCLOSE
Rule 20    constant -> COPEN CCLOSE
Rule 21    charclasscontents -> RANGE charclassitems
Rule 22    charclasscontents -> charclassitems
Rule 23    charclassitems -> CHAR RANGE CHAR charclassitems
Rule 24    charclassitems -> CHAR RANGE CHAR
Rule 25    charclassitems -> CHAR charclassitems
Rule 26    charclassitems -> CHAR
Rule 27    charclassitems -> RSV charclassitems
Rule 28    charclassitems -> RSV
Rule 29    charclassitems -> RANGE

Terminals, with rules where they appear

ALPHA                : 15
CCLOSE               : 19 20
CHAR                 : 16 23 23 24 24 25 26
COPEN                : 19 20
DIGIT                : 14
DQUANTIFIER          : 11
OPT                  : 9
PCLOSE               : 13
PLUS                 : 8
POPEN                : 13
RANGE                : 17 21 23 24 29
RSV                  : 18 27 28
SQUANTIFIER          : 10
STAR                 : 7
UNI                  : 3
error                : 

Nonterminals, with rules where they appear

charclasscontents    : 19
charclassitems       : 21 22 23 25 27
concatenation        : 3 4 5
constant             : 12
expression           : 2 3
quantifier           : 5 6 7 8 9 10 11
start                : 13 0


state 0

    (0) S' -> . start
    (1) start -> .
    (2) start -> . expression
    (3) expression -> . expression UNI concatenation
    (4) expression -> . concatenation
    (5) concatenation -> . concatenation quantifier
    (6) concatenation -> . quantifier
    (7) quantifier -> . quantifier STAR
    (8) quantifier -> . quantifier PLUS
    (9) quantifier -> . quantifier OPT
    (10) quantifier -> . quantifier SQUANTIFIER
    (11) quantifier -> . quantifier DQUANTIFIER
    (12) quantifier -> . constant
    (13) constant -> . POPEN start PCLOSE
    (14) constant -> . DIGIT
    (15) constant -> . ALPHA
    (16) constant -> . CHAR
    (17) constant -> . RANGE
    (18) constant -> . RSV
    (19) constant -> . COPEN charclasscontents CCLOSE
    (20) constant -> . COPEN CCLOSE

    $end            reduce using rule 1 (start -> .)
    POPEN           shift and go to state 6
    DIGIT           shift and go to state 7
    ALPHA           shift and go to state 8
    CHAR            shift and go to state 9
    RANGE           shift and go to state 10
    RSV             shift and go to state 11
    COPEN           shift and go to state 12

    start                          shift and go to state 1
    expression                     shift and go to state 2
    concatenation                  shift and go to state 3
    quantifier                     shift and go to state 4
    constant                       shift and go to state 5

state 1

    (0) S' -> start .



state 2

    (2) start -> expression .
    (3) expression -> expression . UNI concatenation

    $end            reduce using rule 2 (start -> expression .)
    PCLOSE          reduce using rule 2 (start -> expression .)
    UNI             shift and go to state 13


state 3

    (4) expression -> concatenation .
    (5) concatenation -> concatenation . quantifier
    (7) quantifier -> . quantifier STAR
    (8) quantifier -> . quantifier PLUS
    (9) quantifier -> . quantifier OPT
    (10) quantifier -> . quantifier SQUANTIFIER
    (11) quantifier -> . quantifier DQUANTIFIER
    (12) quantifier -> . constant
    (13) constant -> . POPEN start PCLOSE
    (14) constant -> . DIGIT
    (15) constant -> . ALPHA
    (16) constant -> . CHAR
    (17) constant -> . RANGE
    (18) constant -> . RSV
    (19) constant -> . COPEN charclasscontents CCLOSE
    (20) constant -> . COPEN CCLOSE

    UNI             reduce using rule 4 (expression -> concatenation .)
    $end            reduce using rule 4 (expression -> concatenation .)
    PCLOSE          reduce using rule 4 (expression -> concatenation .)
    POPEN           shift and go to state 6
    DIGIT           shift and go to state 7
    ALPHA           shift and go to state 8
    CHAR            shift and go to state 9
    RANGE           shift and go to state 10
    RSV             shift and go to state 11
    COPEN           shift and go to state 12

    quantifier                     shift and go to state 14
    constant                       shift and go to state 5

state 4

    (6) concatenation -> quantifier .
    (7) quantifier -> quantifier . STAR
    (8) quantifier -> quantifier . PLUS
    (9) quantifier -> quantifier . OPT
    (10) quantifier -> quantifier . SQUANTIFIER
    (11) quantifier -> quantifier . DQUANTIFIER

    POPEN           reduce using rule 6 (concatenation -> quantifier .)
    DIGIT           reduce using rule 6 (concatenation -> quantifier .)
    ALPHA           reduce using rule 6 (concatenation -> quantifier .)
    CHAR            reduce using rule 6 (concatenation -> quantifier .)
    RANGE           reduce using rule 6 (concatenation -> quantifier .)
    RSV             reduce using rule 6 (concatenation -> quantifier .)
    COPEN           reduce using rule 6 (concatenation -> quantifier .)
    UNI             reduce using rule 6 (concatenation -> quantifier .)
    $end            reduce using rule 6 (concatenation -> quantifier .)
    PCLOSE          reduce using rule 6 (concatenation -> quantifier .)
    STAR            shift and go to state 15
    PLUS            shift and go to state 16
    OPT             shift and go to state 17
    SQUANTIFIER     shift and go to state 18
    DQUANTIFIER     shift and go to state 19


state 5

    (12) quantifier -> constant .

    STAR            reduce using rule 12 (quantifier -> constant .)
    PLUS            reduce using rule 12 (quantifier -> constant .)
    OPT             reduce using rule 12 (quantifier -> constant .)
    SQUANTIFIER     reduce using rule 12 (quantifier -> constant .)
    DQUANTIFIER     reduce using rule 12 (quantifier -> constant .)
    POPEN           reduce using rule 12 (quantifier -> constant .)
    DIGIT           reduce using rule 12 (quantifier -> constant .)
    ALPHA           reduce using rule 12 (quantifier -> constant .)
    CHAR            reduce using rule 12 (quantifier -> constant .)
    RANGE           reduce using rule 12 (quantifier -> constant .)
    RSV             reduce using rule 12 (quantifier -> constant .)
    COPEN           reduce using rule 12 (quantifier -> constant .)
    UNI             reduce using rule 12 (quantifier -> constant .)
    $end            reduce using rule 12 (quantifier -> constant .)
    PCLOSE          reduce using rule 12 (quantifier -> constant .)


state 6

    (13) constant -> POPEN . start PCLOSE
    (1) start -> .
    (2) start -> . expression
    (3) expression -> . expression UNI concatenation
    (4) expression -> . concatenation
    (5) concatenation -> . concatenation quantifier
    (6) concatenation -> . quantifier
    (7) quantifier -> . quantifier STAR
    (8) quantifier -> . quantifier PLUS
    (9) quantifier -> . quantifier OPT
    (10) quantifier -> . quantifier SQUANTIFIER
    (11) quantifier -> . quantifier DQUANTIFIER
    (12) quantifier -> . constant
    (13) constant -> . POPEN start PCLOSE
    (14) constant -> . DIGIT
    (15) constant -> . ALPHA
    (16) constant -> . CHAR
    (17) constant -> . RANGE
    (18) constant -> . RSV
    (19) constant -> . COPEN charclasscontents CCLOSE
    (20) constant -> . COPEN CCLOSE

    PCLOSE          reduce using rule 1 (start -> .)
    POPEN           shift and go to state 6
    DIGIT           shift and go to state 7
    ALPHA           shift and go to state 8
    CHAR            shift and go to state 9
    RANGE           shift and go to state 10
    RSV             shift and go to state 11
    COPEN           shift and go to state 12

    start                          shift and go to state 20
    expression                     shift and go to state 2
    concatenation                  shift and go to state 3
    quantifier                     shift and go to state 4
    constant                       shift and go to state 5

state 7

    (14) constant -> DIGIT .

    STAR            reduce using rule 14 (constant -> DIGIT .)
    PLUS            reduce using rule 14 (constant -> DIGIT .)
    OPT             reduce using rule 14 (constant -> DIGIT .)
    SQUANTIFIER     reduce using rule 14 (constant -> DIGIT .)
    DQUANTIFIER     reduce using rule 14 (constant -> DIGIT .)
    POPEN           reduce using rule 14 (constant -> DIGIT .)
    DIGIT           reduce using rule 14 (constant -> DIGIT .)
    ALPHA           reduce using rule 14 (constant -> DIGIT .)
    CHAR            reduce using rule 14 (constant -> DIGIT .)
    RANGE           reduce using rule 14 (constant -> DIGIT .)
    RSV             reduce using rule 14 (constant -> DIGIT .)
    COPEN           reduce using rule 14 (constant -> DIGIT .)
    UNI             reduce using rule 14 (constant -> DIGIT .)
    $end            reduce using rule 14 (constant -> DIGIT .)
    PCLOSE          reduce using rule 14 (constant -> DIGIT .)


state 8

    (15) constant -> ALPHA .

    STAR            reduce using rule 15 (constant -> ALPHA .)
    PLUS            reduce using rule 15 (constant -> ALPHA .)
    OPT             reduce using rule 15 (constant -> ALPHA .)
    SQUANTIFIER     reduce using rule 15 (constant -> ALPHA .)
    DQUANTIFIER     reduce using rule 15 (constant -> ALPHA .)
    POPEN           reduce using rule 15 (constant -> ALPHA .)
    DIGIT           reduce using rule 15 (constant -> ALPHA .)
    ALPHA           reduce using rule 15 (constant -> ALPHA .)
    CHAR            reduce using rule 15 (constant -> ALPHA .)
    RANGE           reduce using rule 15 (constant -> ALPHA .)
    RSV             reduce using rule 15 (constant -> ALPHA .)
    COPEN           reduce using rule 15 (constant -> ALPHA .)
    UNI             reduce using rule 15 (constant -> ALPHA .)
    $end            reduce using rule 15 (constant -> ALPHA .)
    PCLOSE          reduce using rule 15 (constant -> ALPHA .)


state 9

    (16) constant -> CHAR .

    STAR            reduce using rule 16 (constant -> CHAR .)
    PLUS            reduce using rule 16 (constant -> CHAR .)
    OPT             reduce using rule 16 (constant -> CHAR .)
    SQUANTIFIER     reduce using rule 16 (constant -> CHAR .)
    DQUANTIFIER     reduce using rule 16 (constant -> CHAR .)
    POPEN           reduce using rule 16 (constant -> CHAR .)
    DIGIT           reduce using rule 16 (constant -> CHAR .)
    ALPHA           reduce using rule 16 (constant -> CHAR .)
    CHAR            reduce using rule 16 (constant -> CHAR .)
    RANGE           reduce using rule 16 (constant -> CHAR .)
    RSV             reduce using rule 16 (constant -> CHAR .)
    COPEN           reduce using rule 16 (constant -> CHAR .)
    UNI             reduce using rule 16 (constant -> CHAR .)
    $end            reduce using rule 16 (constant -> CHAR .)
    PCLOSE          reduce using rule 16 (constant -> CHAR .)


state 10

    (17) constant -> RANGE .

    STAR            reduce using rule 17 (constant -> RANGE .)
    PLUS            reduce using rule 17 (constant -> RANGE .)
    OPT             reduce using rule 17 (constant -> RANGE .)
    SQUANTIFIER     reduce using rule 17 (constant -> RANGE .)
    DQUANTIFIER     reduce using rule 17 (constant -> RANGE .)
    POPEN           reduce using rule 17 (constant -> RANGE .)
    DIGIT           reduce using rule 17 (constant -> RANGE .)
    ALPHA           reduce using rule 17 (constant -> RANGE .)
    CHAR            reduce using rule 17 (constant -> RANGE .)
    RANGE           reduce using rule 17 (constant -> RANGE .)
    RSV             reduce using rule 17 (constant -> RANGE .)
    COPEN           reduce using rule 17 (constant -> RANGE .)
    UNI             reduce using rule 17 (constant -> RANGE .)
    $end            reduce using rule 17 (constant -> RANGE .)
    PCLOSE          reduce using rule 17 (constant -> RANGE .)


state 11

    (18) constant -> RSV .

    STAR            reduce using rule 18 (constant -> RSV .)
    PLUS            reduce using rule 18 (constant -> RSV .)
    OPT             reduce using rule 18 (constant -> RSV .)
    SQUANTIFIER     reduce using rule 18 (constant -> RSV .)
    DQUANTIFIER     reduce using rule 18 (constant -> RSV .)
    POPEN           reduce using rule 18 (constant -> RSV .)
    DIGIT           reduce using rule 18 (constant -> RSV .)
    ALPHA           reduce using rule 18 (constant -> RSV .)
    CHAR            reduce using rule 18 (constant -> RSV .)
    RANGE           reduce using rule 18 (constant -> RSV .)
    RSV             reduce using rule 18 (constant -> RSV .)
    COPEN           reduce using rule 18 (constant -> RSV .)
    UNI             reduce using rule 18 (constant -> RSV .)
    $end            reduce using rule 18 (constant -> RSV .)
    PCLOSE          reduce using rule 18 (constant -> RSV .)


state 12

    (19) constant -> COPEN . charclasscontents CCLOSE
    (20) constant -> COPEN . CCLOSE
    (21) charclasscontents -> . RANGE charclassitems
    (22) charclasscontents -> . charclassitems
    (23) charclassitems -> . CHAR RANGE CHAR charclassitems
    (24) charclassitems -> . CHAR RANGE CHAR
    (25) charclassitems -> . CHAR charclassitems
    (26) charclassitems -> . CHAR
    (27) charclassitems -> . RSV charclassitems
    (28) charclassitems -> . RSV
    (29) charclassitems -> . RANGE

    CCLOSE          shift and go to state 22
    RANGE           shift and go to state 23
    CHAR            shift and go to state 25
    RSV             shift and go to state 26

    charclasscontents              shift and go to state 21
    charclassitems                 shift and go to state 24

state 13

    (3) expression -> expression UNI . concatenation
    (5) concatenation -> . concatenation quantifier
    (6) concatenation -> . quantifier
    (7) quantifier -> . quantifier STAR
    (8) quantifier -> . quantifier PLUS
    (9) quantifier -> . quantifier OPT
    (10) quantifier -> . quantifier SQUANTIFIER
    (11) quantifier -> . quantifier DQUANTIFIER
    (12) quantifier -> . constant
    (13) constant -> . POPEN start PCLOSE
    (14) constant -> . DIGIT
    (15) constant -> . ALPHA
    (16) constant -> . CHAR
    (17) constant -> . RANGE
    (18) constant -> . RSV
    (19) constant -> . COPEN charclasscontents CCLOSE
    (20) constant -> . COPEN CCLOSE

    POPEN           shift and go to state 6
    DIGIT           shift and go to state 7
    ALPHA           shift and go to state 8
    CHAR            shift and go to state 9
    RANGE           shift and go to state 10
    RSV             shift and go to state 11
    COPEN           shift and go to state 12

    concatenation                  shift and go to state 27
    quantifier                     shift and go to state 4
    constant                       shift and go to state 5

state 14

    (5) concatenation -> concatenation quantifier .
    (7) quantifier -> quantifier . STAR
    (8) quantifier -> quantifier . PLUS
    (9) quantifier -> quantifier . OPT
    (10) quantifier -> quantifier . SQUANTIFIER
    (11) quantifier -> quantifier . DQUANTIFIER

    POPEN           reduce using rule 5 (concatenation -> concatenation quantifier .)
    DIGIT           reduce using rule 5 (concatenation -> concatenation quantifier .)
    ALPHA           reduce using rule 5 (concatenation -> concatenation quantifier .)
    CHAR            reduce using rule 5 (concatenation -> concatenation quantifier .)
    RANGE           reduce using rule 5 (concatenation -> concatenation quantifier .)
    RSV             reduce using rule 5 (concatenation -> concatenation quantifier .)
    COPEN           reduce using rule 5 (concatenation -> concatenation quantifier .)
    UNI             reduce using rule 5 (concatenation -> concatenation quantifier .)
    $end            reduce using rule 5 (concatenation -> concatenation quantifier .)
    PCLOSE          reduce using rule 5 (concatenation -> concatenation quantifier .)
    STAR            shift and go to state 15
    PLUS            shift and go to state 16
    OPT             shift and go to state 17
    SQUANTIFIER     shift and go to state 18
    DQUANTIFIER     shift and go to state 19


state 15

    (7) quantifier -> quantifier STAR .

    STAR            reduce using rule 7 (quantifier -> quantifier STAR .)
    PLUS            reduce using rule 7 (quantifier -> quantifier STAR .)
    OPT             reduce using rule 7 (quantifier -> quantifier STAR .)
    SQUANTIFIER     reduce using rule 7 (quantifier -> quantifier STAR .)
    DQUANTIFIER     reduce using rule 7 (quantifier -> quantifier STAR .)
    POPEN           reduce using rule 7 (quantifier -> quantifier STAR .)
    DIGIT           reduce using rule 7 (quantifier -> quantifier STAR .)
    ALPHA           reduce using rule 7 (quantifier -> quantifier STAR .)
    CHAR            reduce using rule 7 (quantifier -> quantifier STAR .)
    RANGE           reduce using rule 7 (quantifier -> quantifier STAR .)
    RSV             reduce using rule 7 (quantifier -> quantifier STAR .)
    COPEN           reduce using rule 7 (quantifier -> quantifier STAR .)
    UNI             reduce using rule 7 (quantifier -> quantifier STAR .)
    $end            reduce using rule 7 (quantifier -> quantifier STAR .)
    PCLOSE          reduce using rule 7 (quantifier -> quantifier STAR .)


state 16

    (8) quantifier -> quantifier PLUS .

    STAR            reduce using rule 8 (quantifier -> quantifier PLUS .)
    PLUS            reduce using rule 8 (quantifier -> quantifier PLUS .)
    OPT             reduce using rule 8 (quantifier -> quantifier PLUS .)
    SQUANTIFIER     reduce using rule 8 (quantifier -> quantifier PLUS .)
    DQUANTIFIER     reduce using rule 8 (quantifier -> quantifier PLUS .)
    POPEN           reduce using rule 8 (quantifier -> quantifier PLUS .)
    DIGIT           reduce using rule 8 (quantifier -> quantifier PLUS .)
    ALPHA           reduce using rule 8 (quantifier -> quantifier PLUS .)
    CHAR            reduce using rule 8 (quantifier -> quantifier PLUS .)
    RANGE           reduce using rule 8 (quantifier -> quantifier PLUS .)
    RSV             reduce using rule 8 (quantifier -> quantifier PLUS .)
    COPEN           reduce using rule 8 (quantifier -> quantifier PLUS .)
    UNI             reduce using rule 8 (quantifier -> quantifier PLUS .)
    $end            reduce using rule 8 (quantifier -> quantifier PLUS .)
    PCLOSE          reduce using rule 8 (quantifier -> quantifier PLUS .)


state 17

    (9) quantifier -> quantifier OPT .

    STAR            reduce using rule 9 (quantifier -> quantifier OPT .)
    PLUS            reduce using rule 9 (quantifier -> quantifier OPT .)
    OPT             reduce using rule 9 (quantifier -> quantifier OPT .)
    SQUANTIFIER     reduce using rule 9 (quantifier -> quantifier OPT .)
    DQUANTIFIER     reduce using rule 9 (quantifier -> quantifier OPT .)
    POPEN           reduce using rule 9 (quantifier -> quantifier OPT .)
    DIGIT           reduce using rule 9 (quantifier -> quantifier OPT .)
    ALPHA           reduce using rule 9 (quantifier -> quantifier OPT .)
    CHAR            reduce using rule 9 (quantifier -> quantifier OPT .)
    RANGE           reduce using rule 9 (quantifier -> quantifier OPT .)
    RSV             reduce using rule 9 (quantifier -> quantifier OPT .)
    COPEN           reduce using rule 9 (quantifier -> quantifier OPT .)
    UNI             reduce using rule 9 (quantifier -> quantifier OPT .)
    $end            reduce using rule 9 (quantifier -> quantifier OPT .)
    PCLOSE          reduce using rule 9 (quantifier -> quantifier OPT .)


state 18

    (10) quantifier -> quantifier SQUANTIFIER .

    STAR            reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    PLUS            reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    OPT             reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    SQUANTIFIER     reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    DQUANTIFIER     reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    POPEN           reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    DIGIT           reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    ALPHA           reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    CHAR            reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    RANGE           reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    RSV             reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    COPEN           reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    UNI             reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    $end            reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)
    PCLOSE          reduce using rule 10 (quantifier -> quantifier SQUANTIFIER .)


state 19

    (11) quantifier -> quantifier DQUANTIFIER .

    STAR            reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    PLUS            reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    OPT             reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    SQUANTIFIER     reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    DQUANTIFIER     reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    POPEN           reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    DIGIT           reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    ALPHA           reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    CHAR            reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    RANGE           reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    RSV             reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    COPEN           reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    UNI             reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    $end            reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)
    PCLOSE          reduce using rule 11 (quantifier -> quantifier DQUANTIFIER .)


state 20

    (13) constant -> POPEN start . PCLOSE

    PCLOSE          shift and go to state 28


state 21

    (19) constant -> COPEN charclasscontents . CCLOSE

    CCLOSE          shift and go to state 29


state 22

    (20) constant -> COPEN CCLOSE .

    STAR            reduce using rule 20 (constant -> COPEN CCLOSE .)
    PLUS            reduce using rule 20 (constant -> COPEN CCLOSE .)
    OPT             reduce using rule 20 (constant -> COPEN CCLOSE .)
    SQUANTIFIER     reduce using rule 20 (constant -> COPEN CCLOSE .)
    DQUANTIFIER     reduce using rule 20 (constant -> COPEN CCLOSE .)
    POPEN           reduce using rule 20 (constant -> COPEN CCLOSE .)
    DIGIT           reduce using rule 20 (constant -> COPEN CCLOSE .)
    ALPHA           reduce using rule 20 (constant -> COPEN CCLOSE .)
    CHAR            reduce using rule 20 (constant -> COPEN CCLOSE .)
    RANGE           reduce using rule 20 (constant -> COPEN CCLOSE .)
    RSV             reduce using rule 20 (constant -> COPEN CCLOSE .)
    COPEN           reduce using rule 20 (constant -> COPEN CCLOSE .)
    UNI             reduce using rule 20 (constant -> COPEN CCLOSE .)
    $end            reduce using rule 20 (constant -> COPEN CCLOSE .)
    PCLOSE          reduce using rule 20 (constant -> COPEN CCLOSE .)


state 23

    (21) charclasscontents -> RANGE . charclassitems
    (29) charclassitems -> RANGE .
    (23) charclassitems -> . CHAR RANGE CHAR charclassitems
    (24) charclassitems -> . CHAR RANGE CHAR
    (25) charclassitems -> . CHAR charclassitems
    (26) charclassitems -> . CHAR
    (27) charclassitems -> . RSV charclassitems
    (28) charclassitems -> . RSV
    (29) charclassitems -> . RANGE

    CCLOSE          reduce using rule 29 (charclassitems -> RANGE .)
    CHAR            shift and go to state 25
    RSV             shift and go to state 26
    RANGE           shift and go to state 30

    charclassitems                 shift and go to state 31

state 24

    (22) charclasscontents -> charclassitems .

    CCLOSE          reduce using rule 22 (charclasscontents -> charclassitems .)


state 25

    (23) charclassitems -> CHAR . RANGE CHAR charclassitems
    (24) charclassitems -> CHAR . RANGE CHAR
    (25) charclassitems -> CHAR . charclassitems
    (26) charclassitems -> CHAR .
    (23) charclassitems -> . CHAR RANGE CHAR charclassitems
    (24) charclassitems -> . CHAR RANGE CHAR
    (25) charclassitems -> . CHAR charclassitems
    (26) charclassitems -> . CHAR
    (27) charclassitems -> . RSV charclassitems
    (28) charclassitems -> . RSV
    (29) charclassitems -> . RANGE

    RANGE           shift and go to state 32
    CCLOSE          reduce using rule 26 (charclassitems -> CHAR .)
    CHAR            shift and go to state 25
    RSV             shift and go to state 26

    charclassitems                 shift and go to state 33

state 26

    (27) charclassitems -> RSV . charclassitems
    (28) charclassitems -> RSV .
    (23) charclassitems -> . CHAR RANGE CHAR charclassitems
    (24) charclassitems -> . CHAR RANGE CHAR
    (25) charclassitems -> . CHAR charclassitems
    (26) charclassitems -> . CHAR
    (27) charclassitems -> . RSV charclassitems
    (28) charclassitems -> . RSV
    (29) charclassitems -> . RANGE

    CCLOSE          reduce using rule 28 (charclassitems -> RSV .)
    CHAR            shift and go to state 25
    RSV             shift and go to state 26
    RANGE           shift and go to state 30

    charclassitems                 shift and go to state 34

state 27

    (3) expression -> expression UNI concatenation .
    (5) concatenation -> concatenation . quantifier
    (7) quantifier -> . quantifier STAR
    (8) quantifier -> . quantifier PLUS
    (9) quantifier -> . quantifier OPT
    (10) quantifier -> . quantifier SQUANTIFIER
    (11) quantifier -> . quantifier DQUANTIFIER
    (12) quantifier -> . constant
    (13) constant -> . POPEN start PCLOSE
    (14) constant -> . DIGIT
    (15) constant -> . ALPHA
    (16) constant -> . CHAR
    (17) constant -> . RANGE
    (18) constant -> . RSV
    (19) constant -> . COPEN charclasscontents CCLOSE
    (20) constant -> . COPEN CCLOSE

    UNI             reduce using rule 3 (expression -> expression UNI concatenation .)
    $end            reduce using rule 3 (expression -> expression UNI concatenation .)
    PCLOSE          reduce using rule 3 (expression -> expression UNI concatenation .)
    POPEN           shift and go to state 6
    DIGIT           shift and go to state 7
    ALPHA           shift and go to state 8
    CHAR            shift and go to state 9
    RANGE           shift and go to state 10
    RSV             shift and go to state 11
    COPEN           shift and go to state 12

    quantifier                     shift and go to state 14
    constant                       shift and go to state 5

state 28

    (13) constant -> POPEN start PCLOSE .

    STAR            reduce using rule 13 (constant -> POPEN start PCLOSE .)
    PLUS            reduce using rule 13 (constant -> POPEN start PCLOSE .)
    OPT             reduce using rule 13 (constant -> POPEN start PCLOSE .)
    SQUANTIFIER     reduce using rule 13 (constant -> POPEN start PCLOSE .)
    DQUANTIFIER     reduce using rule 13 (constant -> POPEN start PCLOSE .)
    POPEN           reduce using rule 13 (constant -> POPEN start PCLOSE .)
    DIGIT           reduce using rule 13 (constant -> POPEN start PCLOSE .)
    ALPHA           reduce using rule 13 (constant -> POPEN start PCLOSE .)
    CHAR            reduce using rule 13 (constant -> POPEN start PCLOSE .)
    RANGE           reduce using rule 13 (constant -> POPEN start PCLOSE .)
    RSV             reduce using rule 13 (constant -> POPEN start PCLOSE .)
    COPEN           reduce using rule 13 (constant -> POPEN start PCLOSE .)
    UNI             reduce using rule 13 (constant -> POPEN start PCLOSE .)
    $end            reduce using rule 13 (constant -> POPEN start PCLOSE .)
    PCLOSE          reduce using rule 13 (constant -> POPEN start PCLOSE .)


state 29

    (19) constant -> COPEN charclasscontents CCLOSE .
